@@ -1,0 +1,1 @@
+declare f as static function returning int
