@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ explain static auto f() -> int @ 0
